[gd_scene load_steps=4 format=2]

[ext_resource path="res://DriveInScreen/AfflictionDialog/9slice.png" type="Texture" id=1]
[ext_resource path="res://DriveInScreen/SelectableTools/scalpel.png" type="Texture" id=2]
[ext_resource path="res://Ui/SurgeryToolSelectButton.gd" type="Script" id=3]

[node name="SurgeryToolSelectButton" type="CenterContainer"]
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 120.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 120.0
margin_bottom = 120.0
texture = ExtResource( 1 )
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 11
patch_margin_bottom = 11

[node name="TextureRectMarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_right = 120.0
margin_bottom = 120.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/TextureRectMarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="MarginContainer" to="." method="_on_MarginContainer_gui_input"]
[connection signal="mouse_entered" from="MarginContainer" to="." method="_on_MarginContainer_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer" to="." method="_on_MarginContainer_mouse_exited"]
